aws/angular-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angularapp
spec:
  replicas: 1 # Adjust the number of replicas as per your requirements
  selector:
    matchLabels:
      app: angularapp
  template:
    metadata:
      labels:
        app: angularapp
    spec:
      containers:
      - name: angular-app-container
        image: vipskuttu/food-delivery-app-fe:8
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  selector:
    app: angularapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
