aws/food-catalogue-manifest.yml

apiVersion: v1
kind: Service
metadata:
  name: foodcatalogue-service
spec:
  ports:
  - protocol: TCP
    port: 9092
    targetPort: 9092
  selector:
    app: foodcatalogueapp
