aws/order-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderapp
  template:
    metadata:
      labels:
        app: orderapp
    spec:
      containers:
      - name: orderapp
        image: vipskuttu/order-service:3
        imagePullPolicy: Always
        ports:
        - containerPort: 9094
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: orderapp
  ports:
  - protocol: TCP
    port: 9094
    targetPort: 9094
