aws/user-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapp
  labels:
    app: userapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapp
  template:
    metadata:
      labels:
        app: userapp
    spec:
      containers:
      - name: userapp
        image: vipskuttu/user-service:2
        imagePullPolicy: Always
        ports:
        - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
  - protocol: TCP
    port: 9093
    targetPort: 9093
  selector:
    app: userapp
