aws/eureka-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eureka-aws-ingress
  #namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eureka-service
            port:
              number: 8761
